<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TopHorizontalSpaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dip" />

    <RelativeLayout
        android:id="@+id/StartButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            style="@style/cs390"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/accel" />

        <ToggleButton
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ActivityLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/StartButtonLayout"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/activity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ActivityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/activity"
            android:padding="10dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/StepsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ActivityLayout"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/steps"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StepCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/StatusLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/StepsLayout"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/status"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/StatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/AccelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/StatusLayout"
        android:orientation="horizontal"
        android:padding="5dip" >

        <TextView
            android:id="@+id/XView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:padding="10dip"
            android:text="@string/x"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelXView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/XView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/YView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelXView"
            android:padding="10dip"
            android:text="@string/y"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelYView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/YView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/AccelYView"
            android:padding="10dip"
            android:text="@string/z"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/AccelZView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ZView"
            android:padding="10dip"
            android:text="@string/nullvalue"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/VisualizeButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AccelLayout"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/VizualizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dip"
            android:padding="10dip"
            android:text="@string/visualize"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SpeechLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/StartButtonLayout" >

        <ToggleButton
            android:id="@+id/StartButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="33dp" />

        <TextView
            android:id="@+id/StatusSpeechView"
            style="@style/cs390"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="32dp"
            android:layout_toLeftOf="@+id/StartButton2"
            android:text="@string/status_speech" />

    </RelativeLayout>

</RelativeLayout>